src/pages/EmployeeProfile/components/BenefitTab/styles.less
.benefitTab {
  display: flex;
  flex-direction: column;
  font-family: 'Roboto', sans-serif;

  .sideTab {
    height: max-content;
    margin-bottom: 24px;
    overflow: hidden;
    background-color: #fff;
    border: solid 1px #d6dce0;
    border-radius: 5px;

    div:last-child {
      border: none;
    }
  }
  .content {
    display: flex;
    flex-wrap: wrap;
    overflow: hidden;
    background-color: #fff;
  }
  .subHeadings {
    margin-top: 24px;
    padding-left: 24px;
    color: #161c29;
    font-weight: 700;
    font-size: 16px;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: normal;
  }
  .headings {
    display: block;
    padding: 24px;
    color: #161c29;
    font-weight: 700;
    font-size: 16px;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: normal;
    background-color: #fff;
    border-bottom: solid 1px #d6dce0;
  }
  .header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 24px;
    border-bottom: solid 1px #d6dce0;
    .headingText {
      margin-bottom: 0px;
      font-weight: 700;
      font-size: 16px;
      font-style: normal;
      font-stretch: normal;
      line-height: normal;
      letter-spacing: normal;
    }
    .editButton {
      display: flex;
      align-items: center;
      cursor: pointer;
      span {
        color: #2c6df9;
      }
      .editText {
        margin-left: 10px;
        font-weight: 500;
        font-style: normal;
        font-stretch: normal;
        line-height: 1;
        letter-spacing: normal;
      }
      &:hover {
        opacity: 0.8;
      }
    }
  }
  :global {
    [data-theme='compact'] .site-collapse-custom-collapse .site-collapse-custom-panel,
    .site-collapse-custom-collapse .site-collapse-custom-panel {
      color: #161c29;
      font-weight: 700;
      font-size: 16px;
      background-color: #fff;
    }

    .ant-collapse-content > .ant-collapse-content-box {
      padding: 0;
    }

    .ant-collapse-icon-position-right > .ant-collapse-item > .ant-collapse-header {
      padding: 24px;
    }

    div.ant-collapse-header {
      :global {
        padding: 24px;
        color: #161c29 !important;
        font-weight: 700;
        font-size: 16px;
        background-color: #fff;
      }
    }
    .ant-collapse-content {
      border-top: solid 1px #d6dce0 !important;
    }

    div.ant-collapse-content-box {
      background-color: #fff;
    }

    .ant-collapse-arrow {
      margin-top: 4px;
    }
  }
}

